--- a/.github/workflows/DockerBuild.yaml
+++ b/.github/workflows/DockerBuild.yaml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        name: build
+      - name: build
         run: |
           docker build .
